--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Resume.pdf"></a>
+    <embed src="Resume.pdf" width="800px" height="2100px" />
 </body>
 </html>
